@@ -26,6 +26,10 @@ import org.elasticsearch.xpack.esql.parser.PromqlBaseParser;
 import org.elasticsearch.xpack.esql.parser.QueryParams;
 import org.elasticsearch.xpack.esql.plan.logical.LogicalPlan;
 import org.elasticsearch.xpack.esql.plan.logical.promql.AcrossSeriesAggregate;
+import org.elasticsearch.xpack.esql.plan.logical.promql.PromqlDataType;
+import org.elasticsearch.xpack.esql.plan.logical.promql.PromqlPlan;
+import org.elasticsearch.xpack.esql.plan.logical.promql.ValueTransformationFunction;
+import org.elasticsearch.xpack.esql.plan.logical.promql.VectorFunction;
 import org.elasticsearch.xpack.esql.plan.logical.promql.WithinSeriesAggregate;
 import org.elasticsearch.xpack.esql.plan.logical.promql.operator.VectorBinaryArithmetic;
 import org.elasticsearch.xpack.esql.plan.logical.promql.operator.VectorBinaryArithmetic.ArithmeticOp;
@@ -50,6 +54,8 @@ import java.util.Set;
 
 import static java.util.Collections.emptyList;
 import static org.elasticsearch.xpack.esql.expression.promql.function.FunctionType.ACROSS_SERIES_AGGREGATION;
+import static org.elasticsearch.xpack.esql.expression.promql.function.FunctionType.VALUE_TRANSFORMATION;
+import static org.elasticsearch.xpack.esql.expression.promql.function.FunctionType.VECTOR;
 import static org.elasticsearch.xpack.esql.expression.promql.function.FunctionType.WITHIN_SERIES_AGGREGATION;
 import static org.elasticsearch.xpack.esql.parser.ParserUtils.visitList;
 import static org.elasticsearch.xpack.esql.parser.PromqlBaseParser.AND;
@@ -67,6 +73,8 @@ import static org.elasticsearch.xpack.esql.parser.PromqlBaseParser.PERCENT;
 import static org.elasticsearch.xpack.esql.parser.PromqlBaseParser.PLUS;
 import static org.elasticsearch.xpack.esql.parser.PromqlBaseParser.SLASH;
 import static org.elasticsearch.xpack.esql.parser.PromqlBaseParser.UNLESS;
+import static org.elasticsearch.xpack.esql.plan.logical.promql.PromqlPlan.returnsRangeVector;
+import static org.elasticsearch.xpack.esql.plan.logical.promql.PromqlPlan.returnsScalar;
 import static org.elasticsearch.xpack.esql.plan.logical.promql.selector.LabelMatcher.NAME;
 
 public class PromqlLogicalPlanBuilder extends PromqlExpressionBuilder {
@@ -86,18 +94,6 @@ public class PromqlLogicalPlanBuilder extends PromqlExpressionBuilder {
     @Override
     public LogicalPlan visitSingleStatement(PromqlBaseParser.SingleStatementContext ctx) {
         return plan(ctx.expression());
-    }
-
-    static boolean isRangeVector(LogicalPlan plan) {
-        return switch (plan) {
-            case RangeSelector r -> true;
-            case Subquery s -> true;
-            default -> false;
-        };
-    }
-
-    static boolean isScalar(LogicalPlan plan) {
-        return plan instanceof LiteralSelector;
     }
 
     private LogicalPlan wrapLiteral(ParseTree ctx) {
@@ -253,11 +249,11 @@ public class PromqlLogicalPlanBuilder extends PromqlExpressionBuilder {
             // optimize negation in case of literals
             if (ctx.operator.getType() == MINUS) {
                 Number negatedValue = Arithmetics.negate((Number) value);
-                unary = new LiteralSelector(source, new Literal(unary.source(), negatedValue, dataType));
+                return new LiteralSelector(source, new Literal(unary.source(), negatedValue, dataType));
             }
         }
         // forbid range selectors
-        else if (isRangeVector(unary)) {
+        else if (returnsRangeVector(unary)) {
             throw new ParsingException(
                 source,
                 "Unary expression only allowed on expressions of type numeric or instant vector, got [{}]",
@@ -285,8 +281,8 @@ public class PromqlLogicalPlanBuilder extends PromqlExpressionBuilder {
         String opText = ctx.op.getText();
 
         // validate operation against expression types
-        boolean leftIsScalar = isScalar(le);
-        boolean rightIsScalar = isScalar(re);
+        boolean leftIsScalar = returnsScalar(le);
+        boolean rightIsScalar = returnsScalar(re);
 
         // comparisons against scalars require bool
         if (bool == false && leftIsScalar && rightIsScalar) {
@@ -342,7 +338,7 @@ public class PromqlLogicalPlanBuilder extends PromqlExpressionBuilder {
         PromqlBaseParser.ModifierContext modifierCtx = ctx.modifier();
         if (modifierCtx != null) {
             // modifiers work only on vectors
-            if (isRangeVector(le) || isRangeVector(re) || isScalar(le) || isScalar(re)) {
+            if (returnsRangeVector(le) || returnsRangeVector(re) || returnsScalar(le) || returnsScalar(re)) {
                 throw new ParsingException(source, "Vector matching allowed only between instant vectors");
             }
 
@@ -436,7 +432,6 @@ public class PromqlLogicalPlanBuilder extends PromqlExpressionBuilder {
         PromqlFunctionRegistry.INSTANCE.checkFunction(source, name);
         var metadata = PromqlFunctionRegistry.INSTANCE.functionMetadata(name);
 
-        // TODO: the list of params could contain literals so need to handle that
         var paramsCtx = ctx.functionParams();
         List<Node> params = paramsCtx != null ? visitList(this, paramsCtx.expression(), Node.class) : emptyList();
 
@@ -450,9 +445,25 @@ public class PromqlLogicalPlanBuilder extends PromqlExpressionBuilder {
         }
 
         // child plan is always the first parameter
-        LogicalPlan child = (LogicalPlan) params.get(0);
+        LogicalPlan child = switch (params.getFirst()) {
+            case LogicalPlan plan -> plan;
+            case Literal literal -> new LiteralSelector(source, literal);
+            case Node n -> throw new IllegalStateException("Unexpected value: " + n);
+        };
 
-        // PromQl expects early validation of the tree so let's do it here
+        // PromQL expects early validation of the tree so let's do it here
+        PromqlDataType expectedInputType = metadata.functionType().inputType();
+        PromqlDataType actualInputType = PromqlPlan.getReturnType(child);
+        if (actualInputType != expectedInputType) {
+            throw new ParsingException(
+                child.source(),
+                "expected type {} in call to function [{}], got {}",
+                expectedInputType,
+                name,
+                actualInputType
+            );
+        }
+
         PromqlBaseParser.GroupingContext groupingContext = ctx.grouping();
 
         LogicalPlan plan = null;
@@ -484,12 +495,13 @@ public class PromqlLogicalPlanBuilder extends PromqlExpressionBuilder {
             if (metadata.functionType() == ACROSS_SERIES_AGGREGATION) {
                 plan = new AcrossSeriesAggregate(source, child, name, List.of(), AcrossSeriesAggregate.Grouping.NONE, List.of());
             } else if (metadata.functionType() == WITHIN_SERIES_AGGREGATION) {
-                if (isRangeVector(child) == false) {
-                    throw new ParsingException(source, "expected type range vector in call to function [{}], got instant vector", name);
-                }
-
                 plan = new WithinSeriesAggregate(source, child, name, List.of());
-                // instant selector function - definitely no grouping
+            } else if (metadata.functionType() == VALUE_TRANSFORMATION) {
+                plan = new ValueTransformationFunction(source, child, name, List.of());
+            } else if (metadata.functionType() == VECTOR) {
+                plan = new VectorFunction(source, child, name, List.of());
+            } else {
+                throw new ParsingException(source, "Unsupported function type [{}] for function [{}]", metadata.functionType(), name);
             }
         }
         //
@@ -501,7 +513,7 @@ public class PromqlLogicalPlanBuilder extends PromqlExpressionBuilder {
         Source source = source(ctx);
         LogicalPlan plan = plan(ctx.expression());
 
-        if (isRangeVector(plan)) {
+        if (returnsRangeVector(plan)) {
             throw new ParsingException(source, "Subquery is only allowed on instant vector, got {}", plan.nodeName());
         }
 
